<resources>
    <string name="app_name">MemoryGame</string>
    <string name="play_uppercase">JOUER</string>
    <string name="settings_uppercase">PARAMETRES</string>
    <string name="score_uppercase">SCORE</string>
    <string name="credits_uppercase">CREDITS</string>
    <string name="sound_settings">Activer le son</string>
    <string name="vibration_settings">Activer le vibreur</string>
    <string name="validate">Valider</string>
    <string name="timer">Pas encore fatigué?</string>
    <string name="notif_timer">Vous jouez depuis 30min, pensez à faire une pause !</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="easy">Facile</string>
    <string name="medium">Normal</string>
    <string name="hard">Difficile</string>
    <string name="time_limit">Limite de temps</string>
    <string name="move_limit">Limite de coups</string>
    <string name="appName">Memory Game</string>

    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Victory">VICTOIRE</string>
    <string name="defeat">DEFAITE</string>
    <string name="sound">Son</string>
    <string name="vibration">Vibration</string>
    <string name="retour">Retour</string>
    <string name="credits">blablablablbdldlvfvefverlkbrkzjloierugpoiezrjgiperzhgpierzhgur hgkjerzhge huiergh huiepzhgeprziuhg hgreighkej hg herzipgh eizphg iezhgier hui izphgueirzp uerizphgerip hgueripzh ruiezhgurie ghriezph gurpz hgrpheguirzep</string>
</resources>
