<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/main_background">

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:background="@drawable/blue_button05"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/play_uppercase"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="261dp"
        android:background="@drawable/blue_button05"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/settings_uppercase"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="358dp"
        android:background="@drawable/blue_button05"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/credits_uppercase"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="344dp"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/green_panel"
        android:text="Et là une image cool avec le nom du jeu"
        android:textSize="20sp" />

</RelativeLayout>