<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ScoreFragment">


    <android.support.constraint.Guideline
        android:id="@+id/LeftBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/rightBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/leftTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/rightTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/topBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/topTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/rightHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/topHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/leftRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/rightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/topTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/leftTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toTopOf="@+id/bottomBackground"
        app:layout_constraintEnd_toStartOf="@+id/rightBackground"
        app:layout_constraintStart_toStartOf="@+id/LeftBackground"
        app:layout_constraintTop_toTopOf="@+id/topBackground" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/table"
        app:layout_constraintBottom_toTopOf="@+id/bottomTable"
        app:layout_constraintEnd_toStartOf="@+id/rightTable"
        app:layout_constraintStart_toStartOf="@+id/leftTable"
        app:layout_constraintTop_toTopOf="@+id/topTable" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintBottom_toTopOf="@+id/bottomHeader"
        app:layout_constraintEnd_toStartOf="@+id/rightHeader"
        app:layout_constraintStart_toStartOf="@+id/leftRank"
        app:layout_constraintTop_toTopOf="@+id/topHeader" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/credits_uppercase"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toTopOf="@+id/bottomTitle"
        app:layout_constraintEnd_toStartOf="@+id/rightTitle"
        app:layout_constraintStart_toStartOf="@+id/leftTitle"
        app:layout_constraintTop_toTopOf="@+id/topTitle" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/credits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="5dp"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toTopOf="@+id/bottomText"
        app:layout_constraintEnd_toStartOf="@+id/rightHeader"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/topText" />

    <android.support.constraint.Guideline
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/topButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/buttonMenuCredit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_1"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/retour"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/bottomButton"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/topButton" />

    <android.support.constraint.Guideline
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <android.support.constraint.Guideline
        android:id="@+id/leftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/polytech_angers"
        app:layout_constraintBottom_toTopOf="@+id/bottomText"
        app:layout_constraintEnd_toStartOf="@+id/leftTitle"
        app:layout_constraintStart_toStartOf="@+id/leftRank"
        app:layout_constraintTop_toTopOf="@+id/topText" />
</android.support.constraint.ConstraintLayout>